assets/css/style.css
.material-icons {
    font-family: 'Material Icons';
    font-weight: normal;
    font-style: normal;
    font-size: 24px;
    line-height: 1;
    letter-spacing: normal;
    text-transform: none;
    display: inline-block;
    white-space: nowrap;
    word-wrap: normal;
    direction: ltr;
    font-feature-settings: 'liga';
    -webkit-font-feature-settings: 'liga';
    -webkit-font-smoothing: antialiased;
}

html,
body {
    overflow-x: hidden;
    scroll-behavior: smooth;
}

p,
button,
a,
span,
div {
    font-family: 'Roboto', sans-serif !important;
    font-display: swap;
}

nav { z-index: 999; }

.brand-logo { padding-left: 0.5em !important; }

#fullLoginForm { 
    padding: 2em;
    width: 25rem;
}

#loginBtn { width: 8rem; }

.custom-link { cursor: pointer; }
.hand { cursor: pointer !important; }
.no-select {
    user-select: none;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;

    -webkit-tap-highlight-color: transparent;
}

.lato   { font-family: 'Lato'  , sans-serif !important; }
.roboto { font-family: 'Roboto', sans-serif !important; }

.thin       { font-weight: 300 !important; }
.regular    { font-weight: 400 !important; }
.medium     { font-weight: 700 !important; }

.small      { font-size: small !important; }

.material-tooltip { font-weight: 150 !important; } /* Should match .thin */

.fixed-height-btn { transform: none; }
.fixed-width-btn {
    width: 100% !important;
    text-align: center !important;
}

#createPostBtn { margin-right: 1em; }
#createMessageBtn { font-size: x-large; }

.word-wrap { word-break: break-word; }

.overflow-ellipsis {
    text-overflow: ellipsis;
    overflow: hidden;
}

.process-whitespaces {
    margin-top: 0;
    white-space: pre-line;
}

.tap-target-content h5  { margin: 0.093333rem 0 .656rem 0; }
.tap-target-content p   {
    margin-top: 1em;
    line-height: 1.5;
}

.grecaptcha-badge { visibility: hidden; }

.pl-05 { padding-left: 0.5em; }

.soft-link { color: #039be5; }

.mid-card-fab       { bottom: 6.10rem   !important; }
.mid-card-fab-icon  {
    font-size: 1.4rem !important;
    color: #ececec  !important;
}

.preloader-bottom-small {
    top:            0.8em;
    margin-left:    0.5em;
    width:          28px !important;
    height:         28px !important;
}

input[type="file"] { display: none; }

.mr-1 { margin-right: 1em; }

.btn-hfab:hover,
.btn-hfab { background-color: #d60e00; }

.btn-hfab:hover, .btn-hfab:focus { background-color: #d60e00 !important; }

.btn-hfab-disabled:hover,
.btn-hfab-disabled { background-color: #646464 !important; }

.ads-badge-text { color: #bcbcbc !important; }

@media (prefers-color-scheme: light) {
    .ads-badge-text { color: #505050 !important; }
}

.message-spacer { height: 1em; }
.collection-spacer { height: 0.5em; }

.card-image { overflow: hidden; }
.unverified-img { filter: blur(15px); }

.no-avatar { padding-left: 20px !important; }

#commentsMessageWrapper * * img { top: 25%; }
#commentsModal .modal-content { height: 100%; }

.add-space { margin-left: 0.3em; }

.half-opacity, .not-posted { opacity: 0.5; }

#removeFileBtn {
    width: 1em;
    right: -3.4rem;
    display: none;
    z-index: 0;
}

#removeFileBtn .material-icons {
    right: 0.6em;
    position: relative;
}

#postProgressBar, #transactionProgressBar {
    display: block;
    background-color: white;
    opacity: 0.2;
    position: absolute;
    z-index: 9999;
}

@media only screen and (min-width: 601px) {
    .fixed-height-btn {
        transform: translate(5px, 65%);
    }
}

.fixed-action-btn .btn-large i { transition: transform 0.3s ease-in-out; }

#recentsContainer {
    overflow: hidden;
    touch-action: pan-y;
    min-height: 100vh;
}

#recentsContainer * { touch-action: pan-y; }

.background {
    width: 100%; height: 96px;
    background-repeat:   no-repeat  !important;
    background-size:     cover      !important;
    background-position: center     !important;
}

.fab-left {
    opacity: 0;
    position: fixed;
    left: 23px;
    bottom: 23px;
    display: block;
}

.message-image {
    width: 100%; height: 18rem;
    background-repeat:   no-repeat  !important;
    background-size:     cover      !important;
    background-position: center     !important;
}

.message-image-full { background-size: contain !important; }

/* Medium-sized devices and bigger (MaterializeCSS spec.) */
@media only screen and (min-width: 601px) {
    .message-image { width: 100%; height: 16rem; }
}

#mobile-nav .user-view {
    margin-bottom: 2.5em;
}

#nav-options-dropdown {
    top: 4.4em !important;
}

.d-flex { display: flex; }

.flex-center {
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.flex-divider {
    width: 0.05em;
    margin-left: 0.5em;
    margin-right: 0.5em;
    height: 1.5em;
}

.counter {
    padding-left: 0.25em;
    padding-right: 0.25em;
}

.collection-icon {
    position: relative;
    top: 0.10em;
}

.likes-toggle,
.comments-open-btn { width: 50%; }

.likes-toggle       { text-align: right; }
.comments-open-btn  { text-align: left;  }

.force-center { text-align: center !important; }

.btn-wrapper {
    display: block;
    width: 100%;
    float: left;
    position: relative;
}

.badge-icon {
    line-height: 20px !important;
    position: relative;
    top: 2px;
}

.mid-card-fab-ad {
    bottom: 2.5rem!important;
}

strong {
    font-weight: 550;
}

#markdownHint {
    font-weight: lighter;
    font-size: small;
}

.full-width { width: 100%; }

.force-inline { display: contents !important; }

[data-comment] .collapsible-header {
    padding-top: 0;
    padding-bottom: 0;
}

.collection-header-main {
    padding-top: 1em;
    padding-bottom: 1em;
}

.collection-header-extra-wrapper {
    position: relative;
    padding-left: 1em;
    border-left: 1px solid;
}

.collection-header-extra {
    position: relative;
    top: 33.3333333%;
}

.collection-counter {
    position: relative;
    top: -0.1em;
}

@media only screen and (max-width: 600px) {
    .modal { width: 95%; }
}

.modal.bottom-sheet { max-height: 100%; }

.preloader-container {
    position: fixed;
    height: 100%;
    width: 100%;
    top: 56px; /* min-height of nav */
    left: 0;
    text-align: center;
}

.preloader-container
.preloader-wrapper {
    position: absolute;
    top: 0;
    margin: auto;
    left: 0;
    bottom: 0;
    right: 0;
}

.tab a span {
    position: relative;
    bottom: 0.5em;
    padding-left: 0.25em;
}

.tabs .switch {
    position: absolute;
    bottom: 1em;
    right: 8px;
}

.tabs .switch label input[type=checkbox]+.lever { right: -0.5em; }

.tabs .switch label input[type=checkbox]:checked+.lever       { background-color: #d8d8d8; }
.tabs .switch label input[type=checkbox]:checked+.lever:after { background-color: #f2eeee; }

input[type=checkbox]:checked:not(:disabled) ~ .lever:active::before,
input[type=checkbox]:checked:not(:disabled).tabbed:focus ~ .lever::before { background-color: #d5d5d526; }

.tabs .switch label span {
    right: -0.5em;
    position: relative;
}

@media only screen and (max-width: 992px) {
    .tabs .switch {
        position: fixed;
        top: 1.5em;
        display: block;
    }

    .tabs .switch label span {
        right: -1em;
    }

    .brand-logo { margin-left: 1.25em; }
}

span.small.nsfw-logo.badge {
    opacity: 0;
    position: absolute;
    top: 0.5em;
    left: 100%;
    margin-left: 0.50em;
    min-width: auto;
}

.fixed-action-btn.direction-top { z-index: 99999999; }

